--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+        env:
+          NODE_ENV: production
 
       - name: Cache Playwright browsers
         uses: actions/cache@v3
@@ -28,11 +30,32 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Verify production build
+        env:
+          NEXT_PUBLIC_APP_URL: http://127.0.0.1:3000
+          NEXT_PUBLIC_SUPABASE_URL: https://example.supabase.co
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: test-anon-key
+          SUPABASE_SERVICE_ROLE_KEY: test-service-role
+          SUPPORT_EMAIL: support@example.com
+        run: npm run build
+
       - name: Run focused lint
         run: npm run lint:core
 
       - name: Run unit tests
         run: npm run test:ci
+
+      - name: Run production build
+        env:
+          NEXT_PUBLIC_APP_URL: http://127.0.0.1:3000
+          NEXT_PUBLIC_SUPABASE_URL: https://example.supabase.co
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: public-anon-key
+          SUPABASE_SERVICE_ROLE_KEY: service-role-key
+          SUPPORT_EMAIL: support@example.com
+          NEXT_PUBLIC_LANDING_ONLY: 'true'
+          RESEND_API_KEY: test-resend-key
+          SENDGRID_FROM_EMAIL: noreply@example.com
+        run: npm run build
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
