--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.39.7",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.6.5",
     "gray-matter": "^4.0.3",
     "localforage": "^1.10.0",
