--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.6.5",
     "gray-matter": "^4.0.3",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.553.0",
     "mixpanel-browser": "^2.71.1",
     "nanoid": "^5.1.6",
     "next": "^14.1.0",
