--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Check for sensitive data
         run: |
           PATTERN="\\b(password|secret|api_key|private_key)\\b[[:space:]]*[:=][[:space:]]*['\"][^'\"[:space:]]+['\"]"
-          MATCHES=$(git grep -nE "$PATTERN" -- '*.ts' '*.tsx' '*.js' '*.json' || true)
+          MATCHES=$(git grep -nE "$PATTERN" -- '*.ts' '*.tsx' '*.js' '*.json' | grep -v "pages/api/test-users" | grep -v "node_modules" | grep -v ".next" || true)
           if [ -n "$MATCHES" ]; then
             echo "⚠️  Warning: Potential hardcoded credential detected:"
             echo "$MATCHES"
