--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "razorpay": "^2.9.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
